--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -13,7 +13,7 @@
         <input id="add" type="button" value="Add">
         <ol id="items"></ol>
     </div>
-    <div id="item">
+    <div id="item" hidden>
         Title: <input id="title" type="text" name="title">
         Notes: <input id="notes" type="text" name="notes">
         <input id="save" type="button" value="Save" disabled>
