--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -5,6 +5,7 @@
     <!--<style>* {padding: 0; margin: 0}</style>-->
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="web-jsdeps.js" charset="UTF-8"></script>
     <script type="text/javascript" src="web-fastopt.js" charset="UTF-8"></script>
     <script type="text/javascript" src="web-launcher.js" charset="UTF-8"></script>
