--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Grocery Shopping List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/gsl.css" rel="stylesheet">
-
 </head>
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -16,7 +14,7 @@
     <script type="text/javascript" src="web-launcher.js" charset="UTF-8"></script>
 
     <div id="list" class="container">
-        <div class="page-header"><h1>My Grocery Shopping List</h1></div>
+        <div class="page-header"><h2>My Grocery Shopping List</h2></div>
         <div class="row">
             <div class="col-xs-12 col-md-12"><table class="table">
                 <tbody id="items"></tbody>
@@ -24,13 +22,13 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-12 text-center footer navbar-fixed-bottom">
-                <input id="add" class="btn btn-primary btn-circle" type="button" value="&#xff0b;"/>
+                <input id="add" class="btn btn-link" type="button" value="ADD">
             </div>
         </div>
     </div>
 
     <div id="one" class="container" hidden>
-        <div class="page-header"><h1>Fill In Details</h1></div>
+        <div class="page-header"><h2>Fill In Details</h2></div>
 
         <div class="row">
             <div class="col-xs-12 col-md-12">
